@@ -1,6 +1,6 @@
 package mcjty.rftoolsbuilder.modules.mover.items;
 
-import mcjty.lib.crafting.INBTPreservingIngredient;
+import mcjty.lib.crafting.IComponentsToPreserve;
 import mcjty.lib.varia.Logging;
 import mcjty.lib.varia.ModuleTools;
 import mcjty.lib.varia.Tools;
@@ -10,6 +10,7 @@ import mcjty.rftoolsbuilder.modules.mover.MoverConfiguration;
 import mcjty.rftoolsbuilder.modules.mover.blocks.MoverControllerTileEntity;
 import mcjty.rftoolsbuilder.setup.Registration;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.component.DataComponentType;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
@@ -21,9 +22,9 @@ import net.minecraft.world.level.block.state.BlockState;
 
 import javax.annotation.Nonnull;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
-public class VehicleStatusModuleItem extends GenericModuleItem implements INBTPreservingIngredient {
+public class VehicleStatusModuleItem extends GenericModuleItem implements IComponentsToPreserve {
 
     @Override
     protected int getUses(ItemStack stack) {
@@ -95,9 +96,9 @@ public class VehicleStatusModuleItem extends GenericModuleItem implements INBTPr
                 .choices("align", "Label alignment", "Left", "Center", "Right").nl();
     }
 
-    // @todo 1.14 implement!
+    // @todo 1.14 implement! / 1.21 TODO
     @Override
-    public Collection<String> getTagsToPreserve() {
-        return Collections.emptyList();
+    public Collection<DataComponentType<?>> getComponentsToPreserve() {
+        return List.of();
     }
 }
